Added explanation of the relationship between SDL_LockAudio and SDL_LockAudioDevice.

--- a/SDL_UnlockAudio.mediawiki
+++ b/SDL_UnlockAudio.mediawiki
@@ -18,7 +18,7 @@ You can add your code example here
 == Remarks ==
 Unlocks a previous [[SDL_LockAudio]]() call. 
 
-The lock manipulated by these functions protects the callback function.  During a [[SDL_LockAudio]]()/[[SDL_UnlockAudio]]() pair, you can be guaranteed that the callback function for the default audio device is not running.  
+The lock manipulated by these functions protects the callback function.  During a [[SDL_LockAudio]]()/[[SDL_UnlockAudio]]() pair, you can be guaranteed that the callback function for the default audio device is not running.  Use [[SDL_LockAudioDevice]]()/[[SDL_UnlockAudioDevice]]() if you need to lock a different audio device.  [[SDL_UnlockAudio]]() is equivalent to [[SDL_UnlockAudioDevice]](1).
 
 Do not call these from the callback function or you will cause deadlock.
 
