--- a/FAQWindows.mediawiki
+++ b/FAQWindows.mediawiki
@@ -43,7 +43,7 @@ This happens with Visual C++ 5, if you use the prebuilt SDL library and have not
 You need to pass the SDL_INIT_NOPARACHUTE flag to your calls to SDL_Init() to make the msvc debugger work. Otherwise the debugger will be unable to trace exceptions, and other debugging features like run to cursor won't work.
 
 ==== Why does the Visual C++ debugger freeze at every breakpoint when debugging SDL apps? ====
-The DirectX drivers have a system lock while you have video surfaces locked. To avoid this, you can set the video driver to GDI by setting the SDL_VIDEODRIVER environment variable to: windib
+The DirectX drivers have a system lock while you have video surfaces locked. To avoid this, you can set the video driver to GDI by setting the SDL_VIDEODRIVER environment variable to: windib.
 Since this changes video and mouse/keyboard input drivers, you'll see a difference in performance and features available, but you'll be able to debug your application more easily.
 
 
