--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -95,7 +95,7 @@ int main(int argc, char* argv[]){
 |-
 |SDL_WINDOW_OPENGL
 |-
-|SDL_WINDOW_SHOWN
+|SDL_WINDOW_HIDDEN
 |-
 |SDL_WINDOW_BORDERLESS
 |-
