--- a/SDL_WindowEventID.mediawiki
+++ b/SDL_WindowEventID.mediawiki
@@ -70,7 +70,7 @@ int main(int, char**)  {
   
   SDL_Window* window = SDL_CreateWindow(
     "Example", SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 
-    width, height, SDL_WINDOW_SHOWN | SDL_WINDOW_RESIZABLE
+    width, height, SDL_WINDOW_RESIZABLE
   );
   Uint32 windowID = SDL_GetWindowFromID(window);
   
