--- a/SDL_SetWindowIcon.mediawiki
+++ b/SDL_SetWindowIcon.mediawiki
@@ -31,7 +31,7 @@ int main(int argc, char* argv[]){
   SDL_Init(SDL_INIT_VIDEO);   // Initialize SDL2
 
   SDL_Window *window = SDL_CreateWindow(    // Open a new window
-    "SDL2 window icon demo", SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 640, 480, SDL_WINDOW_SHOWN|SDL_WINDOW_RESIZABLE
+    "SDL2 window icon demo", SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 640, 480, SDL_WINDOW_RESIZABLE
   );
   
   SDL_Surface *surface;     // Declare an SDL_Surface to be filled in with pixel data from an image file
