--- a/SDL_InitSubSystem.mediawiki
+++ b/SDL_InitSubSystem.mediawiki
@@ -27,7 +27,7 @@ SDL_Init(SDL_INIT_VIDEO);
 .
 SDL_Window* window = SDL_CreateWindow("A Window", 
     SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 640, 480,
-    SDL_WINDOW_FULLSCREEN|SDL_WINDOW_SHOWN);
+    SDL_WINDOW_FULLSCREEN);
 SDL_Renderer* renderer = SDL_CreateRenderer(window, -1, 0);
 .
 /* Do Some Video stuff */
