--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -61,7 +61,7 @@ int main(int argc, char* argv[]){
     SDL_WINDOWPOS_UNDEFINED,           //    initial y position
     640,                               //    width, in pixels
     480,                               //    height, in pixels
-    SDL_WINDOW_SHOWN|SDL_WINDOW_OPENGL //    flags - see below
+    SDL_WINDOW_OPENGL                  //    flags - see below
   );
   
   // Check that the window was successfully made
