--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -33,7 +33,7 @@ Returns 0 on success or a negative error code on failure; call [[SDL_GetError]](
 == Code Examples ==
 ```c++
 
-#include <SDL/SDL.h>
+#include "SDL.h"
 #define SHAPE_SIZE 16
 
 int main(int argc, char *argv[])
