--- a/SDL_SetMainReady.mediawiki
+++ b/SDL_SetMainReady.mediawiki
@@ -22,7 +22,7 @@ void SDL_SetMainReady(void)
 #define SDL_MAIN_HANDLED
 #include "SDL.h"
 
-int main( void )
+int main(int argc, char *argv[])
 {
     SDL_SetMainReady( );
     SDL_Init( SDL_INIT_VIDEO );
