change link from SDL_CreateSurface (dont exist) to SDL_CreateRGBSurface

--- a/SDL_SetPaletteColors.mediawiki
+++ b/SDL_SetPaletteColors.mediawiki
@@ -39,7 +39,7 @@ You can add your code example here
 
 == Related Functions ==
 : [[SDL_AllocPalette]]
-: [[SDL_CreateSurface|SDL_CreateRGBSurface]]
+: [[SDL_CreateRGBSurface|SDL_CreateRGBSurface]]
 
 ----
 [[CategoryAPI]], CategoryPixels
