--- a/SDL_TextureAccess.mediawiki
+++ b/SDL_TextureAccess.mediawiki
@@ -29,4 +29,4 @@ You can add your code example here
 :[[SDL_QueryTexturePixels]]
 
 ----
-[[CategoryEnum]], [[CategoryRenderer]]
+[[CategoryEnum]], [[CategoryRender]]
