--- a/Introduction.mediawiki
+++ b/Introduction.mediawiki
@@ -90,7 +90,7 @@ SDL 2.0 is under the [http://www.zlib.net/zlib_license.html zlib] license, which
 '''''Windows'''''
 
 * Two versions, one safe for all systems based on Win32 APIs, and one with higher performance, based on DirectX APIs
-* Safe version uses GDI for video display. High performance version uses !Direct3D for video display, taking advantage of modern hardware acceleration
+* Safe version uses GDI for video display. High performance version uses Direct3D for video display, taking advantage of modern hardware acceleration
 * Safe version uses waveOut APIs for sound. High performance version uses !DirectSound for audio playback
 
 '''''Mac OS X'''''
