--- a/SDL_CreateWindowAndRenderer.mediawiki
+++ b/SDL_CreateWindowAndRenderer.mediawiki
@@ -12,8 +12,11 @@ Use this function to create a window and default renderer.
 
 == Syntax ==
 ```c++
-int SDL_CreateWindowAndRenderer(int width, int height, Uint32 window_flags,
-                                SDL_Window **window, SDL_Renderer **renderer)
+int SDL_CreateWindowAndRenderer(int            width,
+                                int            height,
+                                Uint32         window_flags,
+                                SDL_Window**   window,
+                                SDL_Renderer** renderer)
 ```
 
 
