--- a/SDL_JoystickGetAttached.mediawiki
+++ b/SDL_JoystickGetAttached.mediawiki
@@ -1,3 +1,4 @@
+<!-- # page was renamed from SDL_JoystickOpened -->
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
 '''DRAFT'''
