--- a/SDL_JoystickOpen.mediawiki
+++ b/SDL_JoystickOpen.mediawiki
@@ -35,7 +35,7 @@ if(SDL_NumJoysticks()>0){
   if(joy)
   {
     printf("Opened Joystick 0\n");
-    printf("Name: %s\n", SDL_JoystickName(0));
+    printf("Name: %s\n", SDL_SDL_JoystickNameForIndex(0));
     printf("Number of Axes: %d\n", SDL_JoystickNumAxes(joy));
     printf("Number of Buttons: %d\n", SDL_JoystickNumButtons(joy));
     printf("Number of Balls: %d\n", SDL_JoystickNumBalls(joy));
