--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -9,12 +9,26 @@
 
 This page describes what changed from SDL 1.2 to SDL 2.0, the new features, and upgrade tips.  Most code written for SDL 1.2 will need to be updated (perhaps only slightly) to work properly with the new API.
 
-== Looking for information ==
+=== Overview of new features ===
+These are the most important new features SDL 2 introduces:
+
+* Full 3D hardware acceleration
+* Support for OpenGL 3.0+
+* Support for multiple windows
+* Support for multiple displays
+* Support for multiple mice, tablets, etc.
+* Force Feedback available on Windows, Mac OS X and Linux
+
+The [[Introduction]] page has a more extensive listing about what features SDL offers in overall (including old 1.2 features).
+
+=== Looking for information ===
 
 The best place for information are:
 * this wiki :)
 * the tests included in SDL, in the ```test/``` directory ([http://hg.libsdl.org/SDL/file/default/test browse online])
 * the SDL [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org mailing list]
+
+
 
 == Video ==
 
