--- a/SDL_GetDesktopDisplayMode.mediawiki
+++ b/SDL_GetDesktopDisplayMode.mediawiki
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+There's a difference between this function and [[SDL_GetCurrentDisplayMode]] when SDL runs fullscreen and has changed the resolution. In that case this function will return the previous native display mode, and not the current display mode.
 
 == Related Functions ==
 :[[SDL_GetCurrentDisplayMode]]
