--- a/SDL_HapticOpened.mediawiki
+++ b/SDL_HapticOpened.mediawiki
@@ -18,7 +18,7 @@ int SDL_HapticOpened(int device_index)
 |}
 
 == Return Value ==
-Returns 1 if it has been opened, 0 if it hasn't, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 1 if it has been opened, 0 if it hasn't or on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
