Removed CategoryHeader because CategoryGameController already there.

--- a/SDL_GameControllerAddMapping.mediawiki
+++ b/SDL_GameControllerAddMapping.mediawiki
@@ -56,7 +56,7 @@ This string shows an example of a valid mapping for a controller:
 :[[SDL_GameControllerMapping]]
 
 ----
-[[CategoryAPI]], [[CategoryHeader]], [[CategoryGameController]]
+[[CategoryAPI]], [[CategoryGameController]]
 <!-- #See the Style Guide for instructions on editing the footer. -->
 ----
 CategoryGameController
