Removed -SGFunctions from search because it seem to exclude pages were it is in comments.

--- a/CategoryAPI.mediawiki
+++ b/CategoryAPI.mediawiki
@@ -20,7 +20,7 @@
 
 == Functions ==
 
-<<FullSearchCached(category:CategoryAPI -SDLFunctionTemplate -SGFunctions)>>
+<<FullSearchCached(category:CategoryAPI -SDLFunctionTemplate)>>
 
 ----
 CategoryCategory
