Added -title:SGFunctions to search to exclude the page but not pages with the word itself.

--- a/CategoryAPI.mediawiki
+++ b/CategoryAPI.mediawiki
@@ -20,7 +20,7 @@
 
 == Functions ==
 
-<<FullSearchCached(category:CategoryAPI -SDLFunctionTemplate)>>
+<<FullSearchCached(category:CategoryAPI -SDLFunctionTemplate -title:SGFunctions)>>
 
 ----
 CategoryCategory
