--- a/CategoryRender.mediawiki
+++ b/CategoryRender.mediawiki
@@ -25,13 +25,13 @@ The texture images can have an additional color tint or alpha modulation applied
 For advanced functionality like particle effects or actual 3d you should use SDL's OpenGL/Direct3D support or one of the many good 3D engines.
 
 == Enumerations ==
-<<FullSearchCached(category:CategoryEnum CategoryRender -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum CategoryRender -title:SGEnumerations)>>
 
 == Structures ==
-<<FullSearchCached(category:CategoryStruct CategoryRender -SGStructures)>>
+<<FullSearchCached(category:CategoryStruct CategoryRender -title:SGStructures)>>
 
 == Functions ==
-<<FullSearchCached(category:CategoryRender -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryRender -CategoryEnum -CategoryStruct -title:SGFunctions)>>
 
 
 ----
