--- a/SDL_GLattr.mediawiki
+++ b/SDL_GLattr.mediawiki
@@ -83,7 +83,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-While you can set most OpenGL attributes normally, the attributes listed above must be known before SDL sets the video mode. These attributes are set and read with [[SDL_GL_SetAttribute]]() and [[SDL_GL_GetAttribute]]().
+While you can set most OpenGL attributes normally, the attributes listed above must be known before SDL creates an OpenGL context. These attributes are set and read with [[SDL_GL_SetAttribute]]() and [[SDL_GL_GetAttribute]]().
 
 <span id="multisample"></span> [http://en.wikipedia.org/wiki/Multisample_anti-aliasing Multisample anti-aliasing] is a type of full screen anti-aliasing.  Multipsampling defaults to off but can be turned on by setting SDL_GL_MULTISAMPLEBUFFERS to 1 and SDL_GL_MULTISAMPLESAMPLES to a value greater than 0.  Typical values are 2 and 4.  
 
@@ -92,6 +92,7 @@ While you can set most OpenGL attributes normally, the attributes listed above m
 == Related Functions ==
 :[[SDL_GL_GetAttribute]]
 :[[SDL_GL_SetAttribute]]
+:[[SDL_GL_CreateContext]]
 
 ----
 [[CategoryEnum]], [[CategoryVideo]]
